force-app/main/default/objects/Litmos__Queue__c/Litmos__Queue__c.object-meta.xml
<CustomObject>
    <label>Queue</label>
    <nameField>
        <displayFormat>Q-{00000000}</displayFormat>
        <label>Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>