force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__ContactID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Queues</relationshipLabel>
    <relationshipName>Queues</relationshipName>
    <type>Lookup</type>
</CustomField>