force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__LearningPathProgramID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LearningPathProgramID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningPathProgram</label>
    <referenceTo>Litmos__LearningPathProgram__c</referenceTo>
    <relationshipLabel>Queues</relationshipLabel>
    <relationshipName>Queues</relationshipName>
    <type>Lookup</type>
</CustomField>