force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__LitmosQueueId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LitmosQueueId__c</fullName>
    <label>LitmosQueueId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>