force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__Message__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>