force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__ModuleNewID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ModuleNewID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module New</label>
    <referenceTo>Litmos__ModuleNew__c</referenceTo>
    <relationshipLabel>Queues</relationshipLabel>
    <relationshipName>Queues</relationshipName>
    <type>Lookup</type>
</CustomField>