force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>Litmos__RecordStatus__c</fullName>
    <label>RecordStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>