force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__RecordType__c.field-meta.xml
<CustomField>
    <fullName>Litmos__RecordType__c</fullName>
    <label>RecordType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>