force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__UserLearningPathResultID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__UserLearningPathResultID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Learning Path Result</label>
    <referenceTo>Litmos__UserLearningPathResult__c</referenceTo>
    <relationshipLabel>Queues</relationshipLabel>
    <relationshipName>Queues</relationshipName>
    <type>Lookup</type>
</CustomField>