force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__UserModuleResultID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__UserModuleResultID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Module Result</label>
    <referenceTo>Litmos__UserModuleResult__c</referenceTo>
    <relationshipLabel>Queues</relationshipLabel>
    <relationshipName>Queues</relationshipName>
    <type>Lookup</type>
</CustomField>