force-app/main/default/objects/Litmos__Queue__c/fields/Litmos__UserProgramResultID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__UserProgramResultID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Program Result</label>
    <referenceTo>Litmos__UserProgramResult__c</referenceTo>
    <relationshipLabel>Queues</relationshipLabel>
    <relationshipName>Queues</relationshipName>
    <type>Lookup</type>
</CustomField>